# LSTracker

./: .gitmodules  Lora.drawio
backend/lptracker-api/: lptracker-api.sln
backend/lptracker-api/lptracker-api/: Endpoints.cs  Program.cs  lptracker-api.csproj  lptracker-api.http
backend/lptracker-api/lptracker-api/Properties/: launchSettings.json
backend/lptracker-api/lptracker-bl/: ITracker.cs  Tracker.cs  lptracker-bl.csproj
backend/lptracker-api/lptracker-bl/Models/: Anchor.cs  DronPosition.cs
firmware/: gpsTest.ino  uwbTest.ino
firmware/anchors/: loraTest.ino
firmware/anchors/dw3000/: dw3000.ino
firmware/anchors/dw3000-2/: DWM3000.cpp  DWM3000.h  dw3000-2.ino  initiator.cpp  responder.cpp  simple_rx.cpp  simple_tx.cpp
firmware/anchors/dw3000-3/: DWM3000EVM.cpp  DWM3000EVM.h  dw3000-3.ino
firmware/arduino/lora/receiver/: receiver.ino
firmware/arduino/lora/setConfigDron/: setConfigDron.ino
firmware/arduino/lora/setConfigPc/: setConfigPc.ino
firmware/arduino/lora/transmitter/: transmitter.ino
firmware/copter/: CMakeLists.txt  download.sh
firmware/copter/source/: CMakeLists.txt
firmware/copter/source/app/: ArgumentsParser.cpp  ArgumentsParser.hpp  CMakeLists.txt  CopterApp.cpp  CopterApp.hpp  Main.cpp
firmware/copter/source/channel/: CMakeLists.txt  IChannel.cpp  IChannel.hpp  TCPChannel.cpp  TCPChannel.hpp  UARTChannel.cpp  UARTChannel.hpp  UDPChannel.cpp  UDPChannel.hpp
firmware/copter/source/communicator/: ByteStream.cpp  ByteStream.hpp  CMakeLists.txt  GPSRawInfo.cpp  GPSRawInfo.hpp  GlobalPositionInfo.cpp  GlobalPositionInfo.hpp  InfoTypes.hpp  MAVLinkCommunicator.cpp  MAVLinkCommunicator.hpp
firmware/copter/source/geo/: CMakeLists.txt  Position.cpp  Position.hpp  WGS84.cpp  WGS84.hpp
firmware/copter/source/math/: CMakeLists.txt  Intersection.cpp  Intersection.hpp  Point.cpp  Point.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp  Utility.cpp  Utility.hpp  Vector.cpp  Vector.hpp
firmware/copter/source/tracker/: CMakeLists.txt  GeometricTriangulation.cpp  GeometricTriangulation.hpp  ITriangulationAlgorithm.hpp  LocalPositionSystem.cpp  LocalPositionSystem.hpp  Position.hpp  TriangulationAlgorithm.cpp  TriangulationAlgorithm.hpp
firmware/pc/lora/setConfig/: setConfig.ino
firmware/pc/lora/setConfig2/: setConfig2.ino
firmware/pc/uart/: uart.ino
frontend/lptracker/: package-lock.json
frontend/lptracker-react/: .gitignore  package-lock.json  package.json
frontend/lptracker-react/src/: App.css  App.jsx  App_Aphilome.jsx  App_Tbirdper.jsx  anchors.js  dronePositions.js  main.jsx  videos.js
frontend/lptracker-react/src/Video/: Video.css  Video.jsx
frontend/lptracker-react/src/components/: Anchor.jsx  DronePosition.jsx  Map.jsx  PlotMain.jsx
frontend/lptracker-react/src/components/map/: Map.jsx
